sst/grammar/SSTParser.py
# Generated from grammar/SST.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SSTParser ( Parser ):

    grammarFileName = "SST.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'procedure'", "';'" ]

    symbolicNames = [ "<INVALID>", "PROCEDURE", "SEMICOLON", "IDENTIFIER", 
                      "WS", "NL", "NonCode", "Directive", "BlockComment", 
                      "LineComment" ]

    RULE_sst = 0
    RULE_procedureDeclaration = 1
    RULE_declaration = 2

    ruleNames =  [ "sst", "procedureDeclaration", "declaration" ]

    EOF = Token.EOF
    PROCEDURE=1
    SEMICOLON=2
    IDENTIFIER=3
    WS=4
    NL=5
    NonCode=6
    Directive=7
    BlockComment=8
    LineComment=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SSTParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SSTParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SSTParser.DeclarationContext,i)


        def Directive(self, i:int=None):
            if i is None:
                return self.getTokens(SSTParser.Directive)
            else:
                return self.getToken(SSTParser.Directive, i)

        def NonCode(self, i:int=None):
            if i is None:
                return self.getTokens(SSTParser.NonCode)
            else:
                return self.getToken(SSTParser.NonCode, i)

        def getRuleIndex(self):
            return SSTParser.RULE_sst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSst" ):
                listener.enterSst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSst" ):
                listener.exitSst(self)




    def sst(self):

        localctx = SSTParser.SstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 9
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SSTParser.PROCEDURE]:
                    self.state = 6
                    self.declaration()
                    pass
                elif token in [SSTParser.Directive]:
                    self.state = 7
                    self.match(SSTParser.Directive)
                    pass
                elif token in [SSTParser.NonCode]:
                    self.state = 8
                    self.match(SSTParser.NonCode)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 11 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SSTParser.PROCEDURE) | (1 << SSTParser.NonCode) | (1 << SSTParser.Directive))) != 0)):
                    break

            self.state = 13
            self.match(SSTParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(SSTParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(SSTParser.IDENTIFIER, 0)

        def WS(self):
            return self.getToken(SSTParser.WS, 0)

        def getRuleIndex(self):
            return SSTParser.RULE_procedureDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclaration" ):
                listener.enterProcedureDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclaration" ):
                listener.exitProcedureDeclaration(self)




    def procedureDeclaration(self):

        localctx = SSTParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self.match(SSTParser.PROCEDURE)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SSTParser.WS:
                self.state = 16
                self.match(SSTParser.WS)


            self.state = 19
            self.match(SSTParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDeclaration(self):
            return self.getTypedRuleContext(SSTParser.ProcedureDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(SSTParser.SEMICOLON, 0)

        def WS(self):
            return self.getToken(SSTParser.WS, 0)

        def getRuleIndex(self):
            return SSTParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SSTParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.procedureDeclaration()
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SSTParser.WS:
                self.state = 22
                self.match(SSTParser.WS)


            self.state = 25
            self.match(SSTParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





